# bunnyland-plugin-wildsim

./: .gitignore  README.md
.github/workflows/: ci.yml
server/: README.md  pyproject.toml
server/src/bunnyland_wildsim/: __init__.py  campfire.py  components.py  enrichment.py  events.py  foraging.py  fragments.py  hunting.py  install.py  integration_3d.py  luck.py  plugin.py  predators.py  scent.py  seasons.py  spatial.py  tanning.py  trapping.py  trophies.py  warmth.py
server/src/bunnyland_wildsim/assets/: ASSET-LICENSES.md  berry-bush.mtl  deciduous-tree.mtl
server/tests/: conftest.py  test_campfire.py  test_enrichment.py  test_foraging.py  test_fragments.py  test_integration_3d.py  test_plugin.py  test_scent.py  test_v2.py  test_v2b.py  test_v2c.py  test_v2d.py  test_warmth.py
